sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort: error: not found: value insertionSort
		insertionSort();
                ^AlgInsertionSort:2: error: not found: value public
public void insertionSort() {
^